@@ -1,7 +1,7 @@
 #' @title Building Residential class
 #'
 #' @usage NULL
-#' @format [R6::R6Class] object.
+#' @format [R6::R6Class] object inheriting from [Building]<-[Asset]<-[Entity].
 #' @include Asset.R
 #'
 #' @description
