@@ -1,7 +1,7 @@
 #' @title Environment class
 #'
 #' @usage NULL
-#' @format [R6::R6Class] object.
+#' @format [R6::R6Class] object inheriting from [Entity].
 #' @include Entity.R
 #'
 #' @description
