@@ -3,7 +3,7 @@
 #' Create Individual class, extended Agent class.
 #'
 #' @usage NULL
-#' @format [R6::R6Class] object
+#' @format [R6::R6Class] object inheriting from [Agent]<-[Entity].
 #' @include Agent.R
 #'
 #' @section Construction:
