@@ -3,7 +3,7 @@
 \name{BuildingIndustrial}
 \alias{BuildingIndustrial}
 \title{Industrial building class}
-\format{\link[R6:R6Class]{R6::R6Class} object.}
+\format{\link[R6:R6Class]{R6::R6Class} object inheriting from \link{Building}<-\link{Asset}<-\link{Entity}.}
 \description{
 Create dwelling class, extended Agent class.
 }
