@@ -3,7 +3,7 @@
 \name{DataBackendDataFrame}
 \alias{DataBackendDataFrame}
 \title{data.frame as data backend}
-\format{\link[R6:R6Class]{R6::R6Class} object.}
+\format{\link[R6:R6Class]{R6::R6Class} object inheriting from \link{DataBackend}.}
 \description{
 Data backend of data.frame
 }
