@@ -3,7 +3,7 @@
 \name{Household}
 \alias{Household}
 \title{Household class}
-\format{\link[R6:R6Class]{R6::R6Class} object inheriting from \link{Agent}.}
+\format{\link[R6:R6Class]{R6::R6Class} object inheriting from \link{Agent}<-\link{Entity}.}
 \description{
 Create Household class, extended Agent class.
 }
