@@ -3,7 +3,7 @@
 \name{Individual}
 \alias{Individual}
 \title{Individual class}
-\format{\link[R6:R6Class]{R6::R6Class} object}
+\format{\link[R6:R6Class]{R6::R6Class} object inheriting from \link{Agent}<-\link{Entity}.}
 \description{
 Create Individual class, extended Agent class.
 }
